--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
 }
 
 .counting-bubble {
-  @apply absolute -right-2 -bottom-1 bg-black w-4 h-4 rounded-full flex justify-center items-center text-white text-xs;
+  @apply absolute -right-2 bottom-0 bg-black w-4 h-4 rounded-full flex justify-center items-center text-white text-xs;
 }
 
 .slider {
