--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,7 @@
 .section-title {
   @apply text-5xl uppercase font-thin;
 }
+
+.flexColMod {
+  @apply flex flex-col fixed z-[2] w-screen h-screen bg-white/80 top-0 bottom-0 left-0 right-0 items-center justify-center text-xl gap-5 text-center backdrop-blur-xl;
+}
