--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,9 @@
 .linear-walkaways {
   @apply relative before:absolute before:top-1/2 before:left-0 before:w-0 before:h-[1px] before:bg-rose-500 hover:before:w-full before:duration-300;
 }
+.linear-walkaways-sm {
+  @apply relative before:absolute before:top-1/2 before:left-0 before:w-0 before:h-[1px] before:bg-green-500 hover:before:w-full before:duration-300;
+}
 
 .counting-bubble {
   @apply absolute -right-2 bottom-0 bg-black w-4 h-4 rounded-full flex justify-center items-center text-white text-xs;
@@ -36,9 +39,17 @@
   @apply text-3xl lg:text-5xl uppercase font-thin;
 }
 
+/* MOBILE NAV */
+
 .flexColMod {
-  @apply flex flex-col fixed z-[2] w-screen h-screen bg-white/90 top-0 bottom-0 left-0 right-0 items-center justify-center text-xl gap-5 text-center backdrop-blur-xl uppercase;
+  @apply flex flex-col fixed z-[2] w-screen h-[calc(screen-5rem)] mt-20 bg-white/80 top-0 bottom-0 left-0 right-0 items-center justify-center text-xl gap-5 text-center backdrop-blur-xl uppercase;
 }
+
+.lock-scroll {
+  overflow: hidden;
+}
+
+/* FOOTER AREA */
 
 .icon-circle {
   @apply h-10 w-10 bg-rose-700 rounded-full flex items-center duration-300 cursor-pointer;
