--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,7 +58,7 @@
   @apply flex gap-4 mt-3 justify-center;
 }
 
-/* image gallery disgn */
+/* image gallery design */
 .grid-container {
   margin: auto auto;
   width: 80rem;
