--- a/styles/globals.css
+++ b/styles/globals.css
@@ -180,6 +180,126 @@
   grid-area: img10;
 }
 
+/* Gallery Responsive Desing Starts*/
+@media only screen and (max-width: 1024px) {
+  .grid-container {
+    margin: 0 auto;
+    width: 100%;
+    height: 80%;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    display: grid;
+    grid-template-areas:
+      "img1  img1  img1  img1  img2  img2"
+      "img5  img5  img6  img6  img7  img7"
+      "img3  img3  img4  img4  img4  img4";
+
+    gap: 1rem;
+    padding: 0.75rem 0.25rem;
+  }
+
+  .item8 {
+    display: none;
+  }
+
+  .item9 {
+    display: none;
+  }
+
+  .item10 {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .grid-container {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    display: grid;
+    grid-template-areas:
+      "img1 img2"
+      "img3 img4";
+
+    gap: 1rem;
+    padding: 0.75rem 0rem;
+  }
+
+  .item5 {
+    display: none;
+  }
+
+  .item6 {
+    display: none;
+  }
+  .item7 {
+    display: none;
+  }
+
+  .item8 {
+    display: none;
+  }
+
+  .item9 {
+    display: none;
+  }
+
+  .item10 {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 468px) {
+  .grid-container {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    display: grid;
+    grid-template-areas:
+      "img1"
+      "img2";
+    gap: 1rem;
+    padding: 0.75rem 0rem;
+  }
+
+  .item3 {
+    display: none;
+  }
+
+  .item4 {
+    display: none;
+  }
+
+  .item5 {
+    display: none;
+  }
+
+  .item6 {
+    display: none;
+  }
+
+  .item7 {
+    display: none;
+  }
+
+  .item8 {
+    display: none;
+  }
+
+  .item9 {
+    display: none;
+  }
+
+  .item10 {
+    display: none;
+  }
+}
+/* Gallery Responsive Desing Ends*/
+
 /* Cart design */
 @media screen and (max-width: 425px) {
   .product-headlines {
