--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,21 +116,22 @@
 /* image gallery design */
 .grid-container {
   margin: auto auto;
-  width: 80rem;
+  width: 100%;
   height: 50rem;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(10, 1fr);
   display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+
   grid-template-areas:
-    "   .    .      .    .     .    .   img3  img3    .     .     .     . "
-    "  img1  img1  img2 img2 img2 img2  img3  img3    .     .     .     . "
-    "  img1  img1  img2 img2 img2 img2  img3  img3  img4  img4    .     . "
-    "  img1  img1  img2 img2 img2 img2  img3  img3  img4  img4    .     . "
-    "  img5  img5  img2 img2 img2 img2  img3  img3  img9  img10 img10   img10"
-    "  img5  img5  img6 img7 img7 img8  img8  img8  img9  img10 img10   img10"
-    "  img5  img5  img6 img7 img7 img8  img8  img8  img9  img10 img10   img10"
-    "  .      .    img6 img7 img7 img8  img8  img8   .    img10 img10   img10"
-    "  .      .      .  img7 img7   .     .      .   .     .      .       . ";
+    "   .    .      .    .     .  img3  img3  img3    .     .     .     . "
+    "  img1  img1   .    .     .  img3  img3  img3  img4  img4  img4   img4 "
+    "  img1  img1  img2 img2 img2 img3  img3  img3  img4  img4  img4   img4 "
+    "  img1  img1  img2 img2 img2 img3  img3  img3  img4  img4  img4   img4 "
+    "  img5  img5  img2 img2 img2 img3  img3  img3  img9  img9 img10   img10"
+    "  img5  img5  img6 img6 img7 img7  img8  img8  img9  img9 img10   img10"
+    "  img5  img5  img6 img6 img7 img7  img8  img8  img9  img9 img10   img10"
+    "  img5  img5  img6 img6 img7 img7  img8  img8   .     .   img10   img10"
+    "  .      .    img6 img6 img7 img7    .     .    .     .      .       . ";
 
   gap: 1rem;
   padding: 0.75rem 0rem;
@@ -181,6 +182,14 @@
 }
 
 /* Gallery Responsive Desing Starts*/
+@media only screen and (max-width: 1280px) {
+  .grid-container {
+    margin: 0 auto;
+    width: 65rem;
+    gap: 0.5rem;
+  }
+}
+
 @media only screen and (max-width: 1024px) {
   .grid-container {
     margin: 0 auto;
@@ -195,7 +204,7 @@
       "img3  img3  img4  img4  img4  img4";
 
     gap: 1rem;
-    padding: 0.75rem 0.25rem;
+    padding: 0.75rem 0rem;
   }
 
   .item8 {
